--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -9,7 +9,9 @@
                 <div class="card text-center">
                     <div class="card__body dev">
                         <img class="avatar avatar--xl" src="{{ profile.image.url }}"/>
-                        <h2 class="dev__name">{{ profile.full_name }}</h2>
+                        <h2 class="dev__name">
+                            {{ profile.full_name }}
+                        </h2>
                         <p class="dev__title">{{ profile.short_intro }}</p>
                         <p class="dev__location">Based in {{ profile.location }}</p>
                         <ul class="dev__social">
